# virtual_extended_screen

./: .gitignore  Makefile  README.md  TECHNICAL_REVIEW.md  plan.md  smoke_test.swift
mac-host/: Package.swift  launch.sh
mac-host/RESC-Host.app/Contents/: Info.plist
mac-host/Sources/RemoteDisplayHost/: BitrateAdapter.swift  Config.swift  ControlChannel.swift  CoordinateMapper.swift  CursorTracker.swift  Discovery.swift  DisplayCapturer.swift  EventInjector.swift  FramePacer.swift  HostSession.swift  InputReceiver.swift  LatestFrameSlot.swift  NALUPackager.swift  NightShiftMonitor.swift  PressedKeyState.swift  ProtocolConstants.swift  SessionStateMachine.swift  StreamingState.swift  VideoEncoder.swift  VideoSender.swift  (+2 more)
proto/: constants.json  control.proto  cursor.proto  input.proto  video.proto
tools/: generate_proto.sh
ubuntu-client/: Cargo.toml  launch.sh  resc-client.desktop
ubuntu-client/crates/input-capture/: Cargo.toml
ubuntu-client/crates/input-capture/src/: lib.rs
ubuntu-client/crates/jitter-buffer/: Cargo.toml
ubuntu-client/crates/jitter-buffer/src/: lib.rs
ubuntu-client/crates/net-transport/: Cargo.toml
ubuntu-client/crates/net-transport/src/: control_channel.rs  discovery.rs  lib.rs  video_receiver.rs
ubuntu-client/crates/protocol/: Cargo.toml  build.rs
ubuntu-client/crates/protocol/src/: lib.rs
ubuntu-client/crates/renderer/: Cargo.toml
ubuntu-client/crates/renderer/src/: cursor_renderer.rs  lib.rs
ubuntu-client/crates/video-decode/: Cargo.toml
ubuntu-client/crates/video-decode/src/: lib.rs
ubuntu-client/src/: main.rs
(+4 files in other folders)
